vzense-sys/vzense/include/Vzense_api_560.h

/**
* @brief 		Starts capturing the image stream indicated by <code>device</code>. \n
Invoke Ps2_StopStream() to stop capturing the image stream.
* @param[in] 	device			The handle of the device on which to start capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that start 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that start only 1 tof stream.						
* @return 	    ::PsRetOK if	the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StartStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Stops capturing the image stream on the device specified by <code>device</code>. that was started using Ps2_StartStream.
* @param[in] 	device			The handle of the device on which to stop capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that stop 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that stop only 1 tof stream.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StopStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Captures the next image frame from the device specified by <code>device</code>. This API must be invoked before capturing frame data using PsGetFrame().
* @param[in] 	device			The handle of the device on which to read the next frame.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	pFrameReady		Pointer to a buffer in which to store the signal on which image is ready to be get.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_ReadNextFrame(PsDeviceHandle device, uint32_t sessionIndex, PsFrameReady* pFrameReady);
/**
* @brief 		Set the waittime of read next frame.
* @param[in] 	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	time 			The unit is millisecond, the value is in the range (0,65535) and the default value is 350 millisecond.
* You can change the value according to the frame rate. For example,the frame rate is 30, so the theoretical waittime interval is 33ms, but if set the time value is 20ms,
* it means the max wait time is 20 ms when capturing next frame, so when call the Ps2_ReadNextFrame, it may return PsRetReadNextFrameTimeOut(-11).
* so the value range that recommended is [50.350].
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetWaitTimeOfReadNextFrame(PsDeviceHandle device, uint32_t sessionIndex, uint16_t time);
/**
* @brief 		Gets the version of SDK.
* @param[in] 	version 		Pointer to a variable in which to store the returned version value.
* @param[in] 	length 			The maximum length is 63 bytes.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetSDKVersion(char* version, int length);
/**
* @brief 		Returns the point value of the frame that the mapping of the depth image to RGB space.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	pointInDepth	The point in depth frame.
* @param[in]	rgbSize			The size(x = w,y = h) of rgb frame.

* @param[out]	pPointInRGB		The point in the rgb frame.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetMappedPointDepthToRGB(const PsDeviceHandle device, const uint32_t sessionIndex, const PsDepthVector3 depthPoint, const PsVector2u16 rgbSize, PsVector2u16* pPosInRGB);
/**
* @brief		Trigger frame data once in slave mode.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetSlaveTrigger(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Gets IP from the device specified by <code>uri</code>. 
* @param[in] 	uri			the uri of the device. See ::PsDeviceInfo for more information.
* @param[out]	ip			Pointer to a buffer in which to store the device IP. the buffer default size is 17, and the last buffer set '\0'. 
* @return: 		::PsRetOK	if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetDeviceIP(const char* uri, char* ip);
/**
* @brief 		Gets the MAC from the device specified by <code>device</code>.
* @param[in] 	device			The handle of the device.
* @param[in] 	sessionIndex	The index of the session.
* @param[out]	mac				Pointer to a buffer in which to store the device MAC. the buffer default size is 18, and the last buffer set '\0'. 
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetDeviceMAC(PsDeviceHandle device, uint32_t sessionIndex, char* mac);
/**
* @brief 		Sets the RGB brightness.
* @param[in] 	device			The handle of the device.
* @param[in] 	sessionIndex	The index of the session.
* @param[in]	value			The value of brightness,in [-64,64].
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetRGBBrightness(PsDeviceHandle device, uint32_t sessionIndex, char value);
/**
* @brief 		Gets the RGB brightness.
* @param[in] 	device			The handle of the device.
* @param[in] 	sessionIndex	The index of the session.
* @param[out]	value			The value of brightness,in [-64,64].
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetRGBBrightness(PsDeviceHandle device, uint32_t sessionIndex, char* value);
/**
* @brief 		Sets the maximum exposure time of RGB in AEC.
* @param[in] 	device			The handle of the device.
* @param[in] 	sessionIndex	The index of the session.
* @param[in]	value			The value of brightness,in [1,30] and the unit is 1ms.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetRGBMaximumExposureTime(PsDeviceHandle device, uint32_t sessionIndex, uint8_t value);
/**
* @brief 		Gets the maximum exposure time  of RGB in AEC.
* @param[in] 	device			The handle of the device.
* @param[in] 	sessionIndex	The index of the session.
* @param[out]	value			The value of brightness,in [1,30] and the unit is 1ms.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetRGBMaximumExposureTime(PsDeviceHandle device, uint32_t sessionIndex, uint8_t* value);
/**
* @brief 		Sets the RGB frequency of power line.
* @param[in] 	device			The handle of the device.
* @param[in] 	sessionIndex	The index of the session.
* @param[in]	value			The frequency value of power line, 1:50HZ 2:60HZ
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetRGBFrequencyOfPowerLine(PsDeviceHandle device, uint32_t sessionIndex, uint8_t value);
/**
* @brief 		Gets the RGB frequency of power line.
* @param[in] 	device			The handle of the device.
* @param[in] 	sessionIndex	The index of the session.
* @param[out]	value			The frequency value of power line, 1:50HZ 2:60HZ
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetRGBFrequencyOfPowerLine(PsDeviceHandle device, uint32_t sessionIndex, uint8_t* value);
/**
* @brief		Reboot the camera.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_RebootCamera(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief		Enables or disables the legacy algorithmic,and default value is disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetLegacyAlgorithmicEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool enabled);
/**
* @brief		Enables or disables the ConfidenceFilter feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetConfidenceFilterEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool enabled);
/**
* @brief 		Returns the Boolean value of whether the ConfidenceFilter feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetConfidenceFilterEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool* enabled);
/**
* @brief 		Sets the ConfidenceFilter threshold value for the device specified by <code>device</code>. 
* @param[in] 	device			The handle of the device on which to set the threshold. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	threshold		The threshold value to set. 0 will attempt to keep all point data but may not be accurate further away; 1000 is the max value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetConfidenceFilterThreshold(PsDeviceHandle device, uint32_t sessionIndex, uint16_t threshold);
/**
* @brief 		Gets the ConfidenceFilter threshold value for the device specified by <code>device</code>. 
* @param[in] 	device			The handle of the device on which to set the threshold. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	threshold		The threshold value to set. 0 will attempt to keep all point data but may not be accurate further away; 1000 is the max value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetConfidenceFilterThreshold(PsDeviceHandle device, uint32_t sessionIndex, uint16_t* threshold);